--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   shared_preferences: ^2.0.13
   http: ^0.13.4
   intl: ^0.17.0
+  cloud_firestore: ^3.1.10
+  firebase_core: ^1.13.1
 
 dev_dependencies:
   flutter_test:
